# grounhog-test

./: CHANGELOG.md  Cargo.toml  README.md  SPECS.md
.cursor/rules/: git-auto-commit.md  git-auto-commit.mdc  groundhog-logging-patterns.mdc  mdc-rule-management.mdc  rust-async-concurrency.mdc  rust-coding-standards.mdc  rust-ecosystem-integration.mdc  rust-error-handling.mdc  rust-logging-observability.mdc  rust-module-organization.mdc  rust-ownership-memory.mdc  rust-performance.mdc  rust-testing.mdc  rust-traits-generics.mdc  rust-unsafe.mdc
benches/: command_bench.rs
examples/: groundhog.toml
specs/: architecture.md  cli.md  commands.md  configuration.md  dependencies.md  development.md  error-handling.md  logging.md
specs/mcp/: ls-tool.md  protocol.md  registry.md  system-prompt.md
specs/ui/: events.md  gauge.md  layout.md  list.md  overview.md  paragraph.md
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: explain.rs  mod.rs  tui.rs
src/core/: mod.rs  models.rs  services.rs
src/infrastructure/: config.rs  error.rs  logging.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
tests/: integration_tests.rs
