[package]
name = "groundhog"
version = "0.1.0"
edition = "2024"
description = "An AI coding assistant command line application"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
tracing-test = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "command_bench"
harness = false
